--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -41,6 +41,12 @@
    "source": [
     "```sh\n",
     "pip install forensicface\n",
+    "```\n",
+    "\n",
+    "ou:\n",
+    "\n",
+    "```sh\n",
+    "conda install -c fastai forensicface\n",
     "```"
    ]
   },
@@ -209,6 +215,15 @@
    "source": [
     "agg = ff.aggregate_from_images([\"obama.png\",\"obama2.png\"])\n",
     "agg.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "help(ff.process_image)"
    ]
   }
  ],
