--- a/_proc/00_forensicface.ipynb
+++ b/_proc/00_forensicface.ipynb
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "language": "python"
    },
@@ -81,10 +81,10 @@
     {
      "data": {
       "text/plain": [
-       "<__main__.ForensicFace at 0x7f4eab4bc3a0>"
+       "<__main__.ForensicFace>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {
     "language": "python"
    },
@@ -112,7 +112,7 @@
        "        [173.40773 , 217.09573 ]], dtype=float32))"
       ]
      },
-     "execution_count": 14,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {
     "language": "python"
    },
@@ -180,7 +180,7 @@
        "0.8556977"
       ]
      },
-     "execution_count": 15,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {
     "language": "python"
    },
@@ -284,7 +284,7 @@
        "(512,)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -300,23 +300,6 @@
    "display_name": "onnxgpu",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.9.13"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "5d2eba9dcae3b57ad0549e14f7337ddce4f7143db9f663634c79a276246cefd7"
-   }
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
