--- a/_proc/index.ipynb
+++ b/_proc/index.ipynb
@@ -41,6 +41,12 @@
    "source": [
     "```sh\n",
     "pip install forensicface\n",
+    "```\n",
+    "\n",
+    "ou:\n",
+    "\n",
+    "```sh\n",
+    "conda install -c fastai forensicface\n",
     "```"
    ]
   },
@@ -74,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "language": "python"
    },
@@ -104,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "language": "python"
    },
@@ -115,7 +121,7 @@
        "dict_keys(['keypoints', 'ipd', 'embedding', 'norm', 'aligned_face'])"
       ]
      },
-     "execution_count": 3,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -127,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "language": "python"
    },
@@ -135,10 +141,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fc6fbfc3340>"
+       "<matplotlib.image.AxesImage>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -170,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "language": "python"
    },
@@ -181,7 +187,7 @@
        "0.8556125"
       ]
      },
-     "execution_count": 5,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "language": "python"
    },
@@ -211,7 +217,7 @@
        "(512,)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,6 +226,17 @@
     "agg = ff.aggregate_from_images([\"obama.png\",\"obama2.png\"])\n",
     "agg.shape"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "language": "python"
+   },
+   "outputs": [],
+   "source": [
+    "help(ff.process_image)"
+   ]
   }
  ],
  "metadata": {
@@ -227,23 +244,6 @@
    "display_name": "onnxgpu",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.9.13"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "5d2eba9dcae3b57ad0549e14f7337ddce4f7143db9f663634c79a276246cefd7"
-   }
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
