--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -24,13 +24,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This file will become your README and also the index of your documentation."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Install"
    ]
   },
@@ -41,12 +34,6 @@
    "source": [
     "```sh\n",
     "pip install forensicface\n",
-    "```\n",
-    "\n",
-    "ou:\n",
-    "\n",
-    "```sh\n",
-    "conda install -c fastai forensicface\n",
     "```"
    ]
   },
@@ -218,12 +205,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "help(ff.process_image)"
+    "Baseado na biblioteca [insightface](https://github.com/deepinsight/insightface) e no repositório [adaface](https://github.com/mk-minchul/AdaFace)"
    ]
   }
  ],
