--- a/nbs/00_forensicface.ipynb
+++ b/nbs/00_forensicface.ipynb
@@ -15,7 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# | default_exp app"
+    "# | default_exp app\n"
    ]
   },
   {
@@ -32,7 +32,7 @@
     "import numpy as np\n",
     "import os.path as osp\n",
     "from insightface.app import FaceAnalysis\n",
-    "from insightface.utils import face_align"
+    "from insightface.utils import face_align\n"
    ]
   },
   {
@@ -44,12 +44,25 @@
     "# | export\n",
     "class ForensicFace:\n",
     "    \"A (forensic) face comparison tool\"\n",
-    "    \n",
+    "\n",
     "    def __init__(\n",
     "        self, model: str = \"sepaelv2\", det_size: int = 320, use_gpu: bool = True\n",
     "    ):\n",
     "\n",
     "        self.det_size = (det_size, det_size)\n",
+    "\n",
+    "        # Download models if needed\n",
+    "        model_base_path = osp.join(osp.expanduser(\"~/.insightface/models\"), model)\n",
+    "        adaface_model_folder = osp.join(model_base_path, \"adaface\")\n",
+    "        det_path = osp.join(model_base_path, \"det_10g.onnx\")\n",
+    "        rec_path = osp.join(adaface_model_folder, \"adaface_ir101web12m.onnx\")\n",
+    "\n",
+    "        if not osp.exists(det_path):\n",
+    "            pass\n",
+    "\n",
+    "        if not osp.exists(det_path):\n",
+    "            pass\n",
+    "\n",
     "        self.detectmodel = FaceAnalysis(\n",
     "            name=model,\n",
     "            allowed_modules=[\"detection\"],\n",
@@ -58,7 +71,7 @@
     "            else [\"CPUExecutionProvider\"],\n",
     "        )\n",
     "        self.detectmodel.prepare(ctx_id=0 if use_gpu else -1, det_size=self.det_size)\n",
-    "        self.ort_session = onnxruntime.InferenceSession(\n",
+    "        self.ort_ada = onnxruntime.InferenceSession(\n",
     "            osp.join(\n",
     "                osp.expanduser(\"~/.insightface/models\"),\n",
     "                model,\n",
@@ -70,9 +83,26 @@
     "            else [\"CPUExecutionProvider\"],\n",
     "        )\n",
     "\n",
-    "    def _to_input(self, aligned_bgr_img):\n",
+    "        self.ort_mag = onnxruntime.InferenceSession(\n",
+    "            osp.join(\n",
+    "                osp.expanduser(\"~/.insightface/models\"),\n",
+    "                model,\n",
+    "                \"magface\",\n",
+    "                \"magface_iresnet100.onnx\",\n",
+    "            ),\n",
+    "            providers=[\"CUDAExecutionProvider\"]\n",
+    "            if use_gpu\n",
+    "            else [\"CPUExecutionProvider\"],\n",
+    "        )\n",
+    "\n",
+    "    def _to_input_ada(self, aligned_bgr_img):\n",
     "        _aligned_bgr_img = aligned_bgr_img.astype(np.float32)\n",
     "        _aligned_bgr_img = ((_aligned_bgr_img / 255.0) - 0.5) / 0.5\n",
+    "        return _aligned_bgr_img.transpose(2, 0, 1).reshape(1, 3, 112, 112)\n",
+    "\n",
+    "    def _to_input_mag(self, aligned_bgr_img):\n",
+    "        _aligned_bgr_img = aligned_bgr_img.astype(np.float32)\n",
+    "        # _aligned_bgr_img = ((_aligned_bgr_img / 255.0) - 0.5) / 0.5\n",
     "        return _aligned_bgr_img.transpose(2, 0, 1).reshape(1, 3, 112, 112)\n",
     "\n",
     "    def get_most_central_face(self, img, faces):\n",
@@ -115,47 +145,35 @@
     "        kps = self.get_most_central_face(bgr_img, faces)\n",
     "        bgr_aligned_face = face_align.norm_crop(bgr_img, kps)\n",
     "        ipd = np.linalg.norm(kps[0] - kps[1])\n",
-    "        ort_inputs = {\n",
-    "            self.ort_session.get_inputs()[0].name: self._to_input(bgr_aligned_face)\n",
+    "        ada_inputs = {\n",
+    "            self.ort_ada.get_inputs()[0].name: self._to_input_ada(bgr_aligned_face)\n",
     "        }\n",
-    "        normalized_embedding, norm = self.ort_session.run(None, ort_inputs)\n",
+    "        mag_inputs = {\n",
+    "            self.ort_mag.get_inputs()[0].name: self._to_input_mag(bgr_aligned_face)\n",
+    "        }\n",
+    "        normalized_embedding, norm = self.ort_ada.run(None, ada_inputs)\n",
+    "        mag_embedding = self.ort_mag.run(None, ada_inputs)[0][0]\n",
+    "        mag_norm = np.linalg.norm(mag_embedding)\n",
+    "\n",
     "        return {\n",
     "            \"keypoints\": kps,\n",
     "            \"ipd\": ipd,\n",
     "            \"embedding\": normalized_embedding.flatten() * norm.flatten()[0],\n",
     "            \"norm\": norm.flatten()[0],\n",
+    "            \"magface_embedding\": mag_embedding,\n",
+    "            \"magface_norm\": mag_norm,\n",
     "            \"aligned_face\": cv2.cvtColor(bgr_aligned_face, cv2.COLOR_BGR2RGB),\n",
-    "        }"
+    "        }\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Applied providers: ['CUDAExecutionProvider', 'CPUExecutionProvider'], with options: {'CPUExecutionProvider': {}, 'CUDAExecutionProvider': {'do_copy_in_default_stream': '1', 'arena_extend_strategy': 'kNextPowerOfTwo', 'gpu_external_empty_cache': '0', 'gpu_external_free': '0', 'cudnn_conv_use_max_workspace': '0', 'gpu_mem_limit': '18446744073709551615', 'cudnn_conv_algo_search': 'EXHAUSTIVE', 'gpu_external_alloc': '0', 'device_id': '0'}}\n",
-      "find model: /home/rafael/.insightface/models/sepaelv2/det_10g.onnx detection [1, 3, '?', '?'] 127.5 128.0\n",
-      "set det-size: (320, 320)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<__main__.ForensicFace>"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "ff = ForensicFace(use_gpu=True)\n",
-    "ff"
+    "ff\n"
    ]
   },
   {
@@ -166,12 +184,12 @@
     {
      "data": {
       "text/plain": [
-       "(dict_keys(['keypoints', 'ipd', 'embedding', 'norm', 'aligned_face']),\n",
-       " array([[103.600136, 139.8824  ],\n",
-       "        [174.26506 , 137.33737 ],\n",
-       "        [140.28088 , 187.14763 ],\n",
-       "        [109.09409 , 219.34001 ],\n",
-       "        [173.40773 , 217.09573 ]], dtype=float32))"
+       "(dict_keys(['keypoints', 'ipd', 'embedding', 'norm', 'magface_embedding', 'magface_norm', 'aligned_face']),\n",
+       " array([[103.600174, 139.88237 ],\n",
+       "        [174.26509 , 137.3373  ],\n",
+       "        [140.28102 , 187.14734 ],\n",
+       "        [109.09419 , 219.34001 ],\n",
+       "        [173.40771 , 217.09573 ]], dtype=float32))"
       ]
      },
      "execution_count": null,
@@ -181,7 +199,7 @@
    ],
    "source": [
     "results = ff.process_image(\"obama.png\")\n",
-    "results.keys(), results['keypoints']"
+    "results.keys(), results[\"keypoints\"]\n"
    ]
   },
   {
@@ -200,14 +218,14 @@
    "source": [
     "# | export\n",
     "@patch\n",
-    "def compare(self:ForensicFace, img1path: str, img2path: str):\n",
+    "def compare(self: ForensicFace, img1path: str, img2path: str):\n",
     "    img1data = self.process_image(img1path)\n",
-    "    assert len(img1data) == 5\n",
+    "    assert len(img1data) > 0\n",
     "    img2data = self.process_image(img2path)\n",
-    "    assert len(img2data) == 5\n",
+    "    assert len(img2data) > 0\n",
     "    return np.dot(img1data[\"embedding\"], img2data[\"embedding\"]) / (\n",
     "        img1data[\"norm\"] * img2data[\"norm\"]\n",
-    "    )"
+    "    )\n"
    ]
   },
   {
@@ -218,7 +236,7 @@
     {
      "data": {
       "text/plain": [
-       "0.8556977"
+       "0.8556057"
       ]
      },
      "execution_count": null,
@@ -227,7 +245,7 @@
     }
    ],
    "source": [
-    "ff.compare(\"obama.png\",\"obama2.png\")"
+    "ff.compare(\"obama.png\", \"obama2.png\")\n"
    ]
   },
   {
@@ -246,7 +264,7 @@
    "source": [
     "# | export\n",
     "@patch\n",
-    "def aggregate_embeddings(self:ForensicFace, embeddings, weights=None):\n",
+    "def aggregate_embeddings(self: ForensicFace, embeddings, weights=None):\n",
     "    if weights is None:\n",
     "        weights = np.ones(embeddings.shape[0], dtype=\"int\")\n",
     "    assert embeddings.shape[0] == weights.shape[0]\n",
@@ -261,13 +279,13 @@
    "source": [
     "# | export\n",
     "@patch\n",
-    "def aggregate_from_images(self:ForensicFace, list_of_image_paths):\n",
+    "def aggregate_from_images(self: ForensicFace, list_of_image_paths):\n",
     "    embeddings = []\n",
     "    weights = []\n",
     "    for imgpath in list_of_image_paths:\n",
     "        d = self.process_image(imgpath)\n",
     "        embeddings.append(d[\"embedding\"])\n",
-    "    return self.aggregate_embeddings(np.array(embeddings))"
+    "    return self.aggregate_embeddings(np.array(embeddings))\n"
    ]
   },
   {
@@ -287,8 +305,40 @@
     }
    ],
    "source": [
-    "aggregated = ff.aggregate_from_images([\"obama.png\",\"obama2.png\"])\n",
-    "aggregated.shape"
+    "aggregated = ff.aggregate_from_images([\"obama.png\", \"obama2.png\"])\n",
+    "aggregated.shape\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Suporte a MagFace\n",
+    "\n",
+    "Modelo de [MagFace](https://github.com/IrvingMeng/MagFace)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(24.87323, 21.321486)"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "good = ff.process_image(\"obama.png\")\n",
+    "bad = ff.process_image(\"obama2.png\")\n",
+    "good[\"magface_norm\"], bad[\"magface_norm\"]\n"
    ]
   }
  ],
