--- a/_proc/00_forensicface.ipynb
+++ b/_proc/00_forensicface.ipynb
@@ -68,27 +68,7 @@
    "metadata": {
     "language": "python"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Applied providers: ['CUDAExecutionProvider', 'CPUExecutionProvider'], with options: {'CPUExecutionProvider': {}, 'CUDAExecutionProvider': {'do_copy_in_default_stream': '1', 'arena_extend_strategy': 'kNextPowerOfTwo', 'gpu_external_empty_cache': '0', 'gpu_external_free': '0', 'cudnn_conv_use_max_workspace': '0', 'gpu_mem_limit': '18446744073709551615', 'cudnn_conv_algo_search': 'EXHAUSTIVE', 'gpu_external_alloc': '0', 'device_id': '0'}}\n",
-      "find model: /home/rafael/.insightface/models/sepaelv2/det_10g.onnx detection [1, 3, '?', '?'] 127.5 128.0\n",
-      "set det-size: (320, 320)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<__main__.ForensicFace>"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "ff = ForensicFace(use_gpu=True)\n",
     "ff"
@@ -104,12 +84,12 @@
     {
      "data": {
       "text/plain": [
-       "(dict_keys(['keypoints', 'ipd', 'embedding', 'norm', 'aligned_face']),\n",
-       " array([[103.600136, 139.8824  ],\n",
-       "        [174.26506 , 137.33737 ],\n",
-       "        [140.28088 , 187.14763 ],\n",
-       "        [109.09409 , 219.34001 ],\n",
-       "        [173.40773 , 217.09573 ]], dtype=float32))"
+       "(dict_keys(['keypoints', 'ipd', 'embedding', 'norm', 'magface_embedding', 'magface_norm', 'aligned_face']),\n",
+       " array([[103.600174, 139.88237 ],\n",
+       "        [174.26509 , 137.3373  ],\n",
+       "        [140.28102 , 187.14734 ],\n",
+       "        [109.09419 , 219.34001 ],\n",
+       "        [173.40771 , 217.09573 ]], dtype=float32))"
       ]
      },
      "execution_count": null,
@@ -119,7 +99,7 @@
    ],
    "source": [
     "results = ff.process_image(\"obama.png\")\n",
-    "results.keys(), results['keypoints']"
+    "results.keys(), results[\"keypoints\"]"
    ]
   },
   {
@@ -140,7 +120,7 @@
       "text/markdown": [
        "---\n",
        "\n",
-       "[source](https://github.com/rafribeiro/forensicface/blob/main/forensicface/app.py#L104){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/rafribeiro/forensicface/blob/main/forensicface/app.py#L144){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### ForensicFace.compare\n",
        "\n",
@@ -149,7 +129,7 @@
       "text/plain": [
        "---\n",
        "\n",
-       "[source](https://github.com/rafribeiro/forensicface/blob/main/forensicface/app.py#L104){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/rafribeiro/forensicface/blob/main/forensicface/app.py#L144){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### ForensicFace.compare\n",
        "\n",
@@ -177,7 +157,7 @@
     {
      "data": {
       "text/plain": [
-       "0.8556977"
+       "0.8556057"
       ]
      },
      "execution_count": null,
@@ -186,7 +166,7 @@
     }
    ],
    "source": [
-    "ff.compare(\"obama.png\",\"obama2.png\")"
+    "ff.compare(\"obama.png\", \"obama2.png\")"
    ]
   },
   {
@@ -207,7 +187,7 @@
       "text/markdown": [
        "---\n",
        "\n",
-       "[source](https://github.com/rafribeiro/forensicface/blob/main/forensicface/app.py#L115){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/rafribeiro/forensicface/blob/main/forensicface/app.py#L156){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### ForensicFace.aggregate_embeddings\n",
        "\n",
@@ -216,7 +196,7 @@
       "text/plain": [
        "---\n",
        "\n",
-       "[source](https://github.com/rafribeiro/forensicface/blob/main/forensicface/app.py#L115){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/rafribeiro/forensicface/blob/main/forensicface/app.py#L156){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### ForensicFace.aggregate_embeddings\n",
        "\n",
@@ -244,7 +224,7 @@
       "text/markdown": [
        "---\n",
        "\n",
-       "[source](https://github.com/rafribeiro/forensicface/blob/main/forensicface/app.py#L124){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/rafribeiro/forensicface/blob/main/forensicface/app.py#L165){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### ForensicFace.aggregate_from_images\n",
        "\n",
@@ -253,7 +233,7 @@
       "text/plain": [
        "---\n",
        "\n",
-       "[source](https://github.com/rafribeiro/forensicface/blob/main/forensicface/app.py#L124){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/rafribeiro/forensicface/blob/main/forensicface/app.py#L165){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### ForensicFace.aggregate_from_images\n",
        "\n",
@@ -290,8 +270,42 @@
     }
    ],
    "source": [
-    "aggregated = ff.aggregate_from_images([\"obama.png\",\"obama2.png\"])\n",
+    "aggregated = ff.aggregate_from_images([\"obama.png\", \"obama2.png\"])\n",
     "aggregated.shape"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Suporte a MagFace\n",
+    "\n",
+    "Modelo de [MagFace](https://github.com/IrvingMeng/MagFace)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "language": "python"
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(24.87323, 21.321486)"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "good = ff.process_image(\"obama.png\")\n",
+    "bad = ff.process_image(\"obama2.png\")\n",
+    "good[\"magface_norm\"], bad[\"magface_norm\"]"
    ]
   }
  ],
