--- a/_proc/00_forensicface.ipynb
+++ b/_proc/00_forensicface.ipynb
@@ -68,7 +68,27 @@
    "metadata": {
     "language": "python"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Applied providers: ['CUDAExecutionProvider', 'CPUExecutionProvider'], with options: {'CPUExecutionProvider': {}, 'CUDAExecutionProvider': {'do_copy_in_default_stream': '1', 'arena_extend_strategy': 'kNextPowerOfTwo', 'gpu_external_empty_cache': '0', 'gpu_external_free': '0', 'cudnn_conv_use_max_workspace': '0', 'gpu_mem_limit': '18446744073709551615', 'cudnn_conv_algo_search': 'EXHAUSTIVE', 'gpu_external_alloc': '0', 'device_id': '0'}}\n",
+      "find model: /home/rafael/.insightface/models/sepaelv2/det_10g.onnx detection [1, 3, '?', '?'] 127.5 128.0\n",
+      "set det-size: (320, 320)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<__main__.ForensicFace>"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "ff = ForensicFace(use_gpu=True)\n",
     "ff"
@@ -85,11 +105,11 @@
      "data": {
       "text/plain": [
        "(dict_keys(['keypoints', 'ipd', 'embedding', 'norm', 'magface_embedding', 'magface_norm', 'aligned_face']),\n",
-       " array([[103.600174, 139.88237 ],\n",
-       "        [174.26509 , 137.3373  ],\n",
-       "        [140.28102 , 187.14734 ],\n",
-       "        [109.09419 , 219.34001 ],\n",
-       "        [173.40771 , 217.09573 ]], dtype=float32))"
+       " array([[103.60003, 139.88234],\n",
+       "        [174.26518, 137.33716],\n",
+       "        [140.281  , 187.14792],\n",
+       "        [109.09437, 219.34015],\n",
+       "        [173.40778, 217.09576]], dtype=float32))"
       ]
      },
      "execution_count": null,
@@ -157,7 +177,7 @@
     {
      "data": {
       "text/plain": [
-       "0.8556057"
+       "0.8555722"
       ]
      },
      "execution_count": null,
@@ -294,7 +314,7 @@
     {
      "data": {
       "text/plain": [
-       "(24.87323, 21.321486)"
+       "(23.225662, 22.580925)"
       ]
      },
      "execution_count": null,
@@ -303,8 +323,8 @@
     }
    ],
    "source": [
-    "good = ff.process_image(\"obama.png\")\n",
-    "bad = ff.process_image(\"obama2.png\")\n",
+    "good = ff.process_image(\"001_frontal.JPG\")\n",
+    "bad = ff.process_image(\"001_cam1_1.jpg\")\n",
     "good[\"magface_norm\"], bad[\"magface_norm\"]"
    ]
   }
