--- a/nbs/00_forensicface.ipynb
+++ b/nbs/00_forensicface.ipynb
@@ -12,7 +12,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [],
    "source": [
     "# | default_exp app\n"
@@ -21,7 +25,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [],
    "source": [
     "# | export\n",
@@ -38,7 +46,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [],
    "source": [
     "# | export\n",
@@ -102,7 +114,7 @@
     "\n",
     "    def _to_input_mag(self, aligned_bgr_img):\n",
     "        _aligned_bgr_img = aligned_bgr_img.astype(np.float32)\n",
-    "        # _aligned_bgr_img = ((_aligned_bgr_img / 255.0) - 0.5) / 0.5\n",
+    "        _aligned_bgr_img = _aligned_bgr_img / 255.0\n",
     "        return _aligned_bgr_img.transpose(2, 0, 1).reshape(1, 3, 112, 112)\n",
     "\n",
     "    def get_most_central_face(self, img, faces):\n",
@@ -169,8 +181,32 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Applied providers: ['CUDAExecutionProvider', 'CPUExecutionProvider'], with options: {'CPUExecutionProvider': {}, 'CUDAExecutionProvider': {'do_copy_in_default_stream': '1', 'arena_extend_strategy': 'kNextPowerOfTwo', 'gpu_external_empty_cache': '0', 'gpu_external_free': '0', 'cudnn_conv_use_max_workspace': '0', 'gpu_mem_limit': '18446744073709551615', 'cudnn_conv_algo_search': 'EXHAUSTIVE', 'gpu_external_alloc': '0', 'device_id': '0'}}\n",
+      "find model: /home/rafael/.insightface/models/sepaelv2/det_10g.onnx detection [1, 3, '?', '?'] 127.5 128.0\n",
+      "set det-size: (320, 320)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<__main__.ForensicFace>"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "ff = ForensicFace(use_gpu=True)\n",
     "ff\n"
@@ -179,17 +215,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
        "(dict_keys(['keypoints', 'ipd', 'embedding', 'norm', 'magface_embedding', 'magface_norm', 'aligned_face']),\n",
-       " array([[103.600174, 139.88237 ],\n",
-       "        [174.26509 , 137.3373  ],\n",
-       "        [140.28102 , 187.14734 ],\n",
-       "        [109.09419 , 219.34001 ],\n",
-       "        [173.40771 , 217.09573 ]], dtype=float32))"
+       " array([[103.60003, 139.88234],\n",
+       "        [174.26518, 137.33716],\n",
+       "        [140.281  , 187.14792],\n",
+       "        [109.09437, 219.34015],\n",
+       "        [173.40778, 217.09576]], dtype=float32))"
       ]
      },
      "execution_count": null,
@@ -213,7 +253,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [],
    "source": [
     "# | export\n",
@@ -231,12 +275,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.8556057"
+       "0.8555722"
       ]
      },
      "execution_count": null,
@@ -259,7 +307,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [],
    "source": [
     "# | export\n",
@@ -274,7 +326,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [],
    "source": [
     "# | export\n",
@@ -291,7 +347,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -322,12 +382,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(24.87323, 21.321486)"
+       "(23.225662, 22.580925)"
       ]
      },
      "execution_count": null,
@@ -336,8 +400,8 @@
     }
    ],
    "source": [
-    "good = ff.process_image(\"obama.png\")\n",
-    "bad = ff.process_image(\"obama2.png\")\n",
+    "good = ff.process_image(\"001_frontal.JPG\")\n",
+    "bad = ff.process_image(\"001_cam1_1.jpg\")\n",
     "good[\"magface_norm\"], bad[\"magface_norm\"]\n"
    ]
   }
