add suport for images with multiple faces

--- a/_proc/00_forensicface.ipynb
+++ b/_proc/00_forensicface.ipynb
@@ -95,6 +95,34 @@
    },
    "outputs": [
     {
+     "data": {
+      "text/plain": [
+       "(dict_keys(['keypoints', 'ipd', 'gender', 'age', 'pitch', 'yaw', 'roll', 'embedding', 'norm']),\n",
+       " array([[471.42743, 418.60498],\n",
+       "        [522.68933, 418.05362],\n",
+       "        [498.82196, 449.08923],\n",
+       "        [479.3499 , 476.44193],\n",
+       "        [514.33453, 476.06885]], dtype=float32))"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "results = ff.process_image_multiple_faces(\"tela.png\")\n",
+    "results[0].keys(), results[0][\"keypoints\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "language": "python"
+   },
+   "outputs": [
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
@@ -104,21 +132,14 @@
      ]
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "dict_keys(['bbox', 'kps', 'det_score', 'landmark_3d_68', 'pose', 'gender', 'age'])\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
        "(dict_keys(['keypoints', 'ipd', 'gender', 'age', 'pitch', 'yaw', 'roll', 'embedding', 'norm', 'magface_embedding', 'magface_norm', 'aligned_face']),\n",
-       " array([[103.600136, 139.88274 ],\n",
-       "        [174.26476 , 137.33769 ],\n",
-       "        [140.28084 , 187.14792 ],\n",
-       "        [109.09488 , 219.34029 ],\n",
-       "        [173.40738 , 217.09586 ]], dtype=float32))"
+       " array([[103.60017, 139.88235],\n",
+       "        [174.26508, 137.33731],\n",
+       "        [140.28102, 187.14734],\n",
+       "        [109.0942 , 219.34001],\n",
+       "        [173.40771, 217.09573]], dtype=float32))"
       ]
      },
      "execution_count": null,
@@ -127,7 +148,7 @@
     }
    ],
    "source": [
-    "results = ff.process_image(\"obama.png\")\n",
+    "results = ff.process_image_single_face(\"obama.png\")\n",
     "results.keys(), results[\"keypoints\"]"
    ]
   },
@@ -149,7 +170,7 @@
       "text/markdown": [
        "---\n",
        "\n",
-       "[source](https://github.com/rafribeiro/forensicface/blob/main/forensicface/app.py#L152){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/rafribeiro/forensicface/blob/main/forensicface/app.py#L213){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### ForensicFace.compare\n",
        "\n",
@@ -158,7 +179,7 @@
       "text/plain": [
        "---\n",
        "\n",
-       "[source](https://github.com/rafribeiro/forensicface/blob/main/forensicface/app.py#L152){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/rafribeiro/forensicface/blob/main/forensicface/app.py#L213){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### ForensicFace.compare\n",
        "\n",
@@ -216,7 +237,7 @@
       "text/markdown": [
        "---\n",
        "\n",
-       "[source](https://github.com/rafribeiro/forensicface/blob/main/forensicface/app.py#L164){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/rafribeiro/forensicface/blob/main/forensicface/app.py#L225){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### ForensicFace.aggregate_embeddings\n",
        "\n",
@@ -225,7 +246,7 @@
       "text/plain": [
        "---\n",
        "\n",
-       "[source](https://github.com/rafribeiro/forensicface/blob/main/forensicface/app.py#L164){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/rafribeiro/forensicface/blob/main/forensicface/app.py#L225){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### ForensicFace.aggregate_embeddings\n",
        "\n",
@@ -253,7 +274,7 @@
       "text/markdown": [
        "---\n",
        "\n",
-       "[source](https://github.com/rafribeiro/forensicface/blob/main/forensicface/app.py#L173){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/rafribeiro/forensicface/blob/main/forensicface/app.py#L234){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### ForensicFace.aggregate_from_images\n",
        "\n",
@@ -262,7 +283,7 @@
       "text/plain": [
        "---\n",
        "\n",
-       "[source](https://github.com/rafribeiro/forensicface/blob/main/forensicface/app.py#L173){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/rafribeiro/forensicface/blob/main/forensicface/app.py#L234){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### ForensicFace.aggregate_from_images\n",
        "\n",
