--- a/nbs/00_forensicface.ipynb
+++ b/nbs/00_forensicface.ipynb
@@ -51,20 +51,20 @@
     "\n",
     "        self.det_size = (det_size, det_size)\n",
     "\n",
-    "        #model_base_path = osp.join(osp.expanduser(\"~/.insightface/models\"), model)\n",
-    "        #adaface_model_folder = osp.join(model_base_path, \"adaface\")\n",
-    "        #det_path = osp.join(model_base_path, \"det_10g.onnx\")\n",
-    "        #rec_path = osp.join(adaface_model_folder, \"adaface_ir101web12m.onnx\")\n",
+    "        # model_base_path = osp.join(osp.expanduser(\"~/.insightface/models\"), model)\n",
+    "        # adaface_model_folder = osp.join(model_base_path, \"adaface\")\n",
+    "        # det_path = osp.join(model_base_path, \"det_10g.onnx\")\n",
+    "        # rec_path = osp.join(adaface_model_folder, \"adaface_ir101web12m.onnx\")\n",
     "\n",
-    "        #if not osp.exists(det_path):\n",
+    "        # if not osp.exists(det_path):\n",
     "        #    pass\n",
     "\n",
-    "        #if not osp.exists(det_path):\n",
+    "        # if not osp.exists(det_path):\n",
     "        #    pass\n",
     "\n",
     "        self.detectmodel = FaceAnalysis(\n",
     "            name=model,\n",
-    "            #allowed_modules=[\"detection\",\"landmark_3d_68\",\"genderage\"],\n",
+    "            # allowed_modules=[\"detection\",\"landmark_3d_68\",\"genderage\"],\n",
     "            providers=[\"CUDAExecutionProvider\"]\n",
     "            if use_gpu\n",
     "            else [\"CPUExecutionProvider\"],\n",
@@ -124,9 +124,9 @@
     "        idx = dist.index(min(dist))\n",
     "        return idx, faces[idx].kps\n",
     "\n",
-    "    def process_image(self, imgpath: str):  # Path to image to be processed\n",
+    "    def process_image_single_face(self, imgpath: str):  # Path to image to be processed\n",
     "        \"\"\"\n",
-    "        Process image and returns list of dicts with:\n",
+    "        Process image and returns dict with:\n",
     "\n",
     "        - keypoints: 5 facial points (left eye, right eye, nose tip, left mouth corner and right mouth corner)\n",
     "\n",
@@ -143,7 +143,7 @@
     "        if len(faces) == 0:\n",
     "            return {}\n",
     "        idx, kps = self.get_most_central_face(bgr_img, faces)\n",
-    "        gender = 'M' if faces[idx].gender == 1 else 'F'\n",
+    "        gender = \"M\" if faces[idx].gender == 1 else \"F\"\n",
     "        age = faces[idx].age\n",
     "        pitch, yaw, roll = faces[idx].pose\n",
     "        bgr_aligned_face = face_align.norm_crop(bgr_img, kps)\n",
@@ -171,7 +171,68 @@
     "            \"magface_embedding\": mag_embedding,\n",
     "            \"magface_norm\": mag_norm,\n",
     "            \"aligned_face\": cv2.cvtColor(bgr_aligned_face, cv2.COLOR_BGR2RGB),\n",
-    "        }\n"
+    "        }\n",
+    "\n",
+    "    def process_image(self, imgpath):\n",
+    "        return self.process_image_single_face(imgpath)\n",
+    "        \n",
+    "    def process_image_multiple_faces(\n",
+    "        self, imgpath: str, # Path to image to be processed\n",
+    "\n",
+    "    ):  \n",
+    "        \"\"\"\n",
+    "        Process image and returns list of dicts with:\n",
+    "\n",
+    "        - keypoints: 5 facial points (left eye, right eye, nose tip, left mouth corner and right mouth corner)\n",
+    "\n",
+    "        - ipd: interpupillary distance\n",
+    "\n",
+    "        - normalized_embedding\n",
+    "\n",
+    "        - embedding_norm\n",
+    "\n",
+    "        - aligned_face: face after alignment using the keypoints as references for affine transform\n",
+    "        \"\"\"\n",
+    "        bgr_img = cv2.imread(imgpath)\n",
+    "        faces = self.detectmodel.get(bgr_img)\n",
+    "        if len(faces) == 0:\n",
+    "            return []\n",
+    "        ret = []\n",
+    "        for face in faces:\n",
+    "\n",
+    "            kps = face.kps\n",
+    "            gender = \"M\" if face.gender == 1 else \"F\"\n",
+    "            age = face.age\n",
+    "            pitch, yaw, roll = face.pose\n",
+    "            bgr_aligned_face = face_align.norm_crop(bgr_img, kps)\n",
+    "            ipd = np.linalg.norm(kps[0] - kps[1])\n",
+    "            ada_inputs = {\n",
+    "                self.ort_ada.get_inputs()[0].name: self._to_input_ada(bgr_aligned_face)\n",
+    "            }\n",
+    "            #mag_inputs = {\n",
+    "            #    self.ort_mag.get_inputs()[0].name: self._to_input_mag(bgr_aligned_face)\n",
+    "            #}\n",
+    "            normalized_embedding, norm = self.ort_ada.run(None, ada_inputs)\n",
+    "            #mag_embedding = self.ort_mag.run(None, ada_inputs)[0][0]\n",
+    "            #mag_norm = np.linalg.norm(mag_embedding)\n",
+    "\n",
+    "            ret.append(\n",
+    "                {\n",
+    "                    \"keypoints\": kps,\n",
+    "                    \"ipd\": ipd,\n",
+    "                    \"gender\": gender,\n",
+    "                    \"age\": age,\n",
+    "                    \"pitch\": pitch,\n",
+    "                    \"yaw\": yaw,\n",
+    "                    \"roll\": roll,\n",
+    "                    \"embedding\": normalized_embedding.flatten() * norm.flatten()[0],\n",
+    "                    \"norm\": norm.flatten()[0],\n",
+    "                   #\"magface_embedding\": mag_embedding,\n",
+    "                    #\"magface_norm\": mag_norm,\n",
+    "                    #\"aligned_face\": cv2.cvtColor(bgr_aligned_face, cv2.COLOR_BGR2RGB),\n",
+    "                }\n",
+    "            )\n",
+    "        return ret\n"
    ]
   },
   {
@@ -203,6 +264,32 @@
    "metadata": {},
    "outputs": [
     {
+     "data": {
+      "text/plain": [
+       "(dict_keys(['keypoints', 'ipd', 'gender', 'age', 'pitch', 'yaw', 'roll', 'embedding', 'norm']),\n",
+       " array([[471.42743, 418.60498],\n",
+       "        [522.68933, 418.05362],\n",
+       "        [498.82196, 449.08923],\n",
+       "        [479.3499 , 476.44193],\n",
+       "        [514.33453, 476.06885]], dtype=float32))"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "results = ff.process_image_multiple_faces(\"tela.png\")\n",
+    "results[0].keys(), results[0][\"keypoints\"]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
@@ -212,21 +299,14 @@
      ]
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "dict_keys(['bbox', 'kps', 'det_score', 'landmark_3d_68', 'pose', 'gender', 'age'])\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
        "(dict_keys(['keypoints', 'ipd', 'gender', 'age', 'pitch', 'yaw', 'roll', 'embedding', 'norm', 'magface_embedding', 'magface_norm', 'aligned_face']),\n",
-       " array([[103.600136, 139.88274 ],\n",
-       "        [174.26476 , 137.33769 ],\n",
-       "        [140.28084 , 187.14792 ],\n",
-       "        [109.09488 , 219.34029 ],\n",
-       "        [173.40738 , 217.09586 ]], dtype=float32))"
+       " array([[103.60017, 139.88235],\n",
+       "        [174.26508, 137.33731],\n",
+       "        [140.28102, 187.14734],\n",
+       "        [109.0942 , 219.34001],\n",
+       "        [173.40771, 217.09573]], dtype=float32))"
       ]
      },
      "execution_count": null,
@@ -235,7 +315,7 @@
     }
    ],
    "source": [
-    "results = ff.process_image(\"obama.png\")\n",
+    "results = ff.process_image_single_face(\"obama.png\")\n",
     "results.keys(), results[\"keypoints\"]\n"
    ]
   },
