--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -102,7 +102,7 @@
     }
    ],
    "source": [
-    "results = ff.process_image(\"obama.png\")\n",
+    "results = ff.process_image_single_face(\"obama.png\")\n",
     "results.keys()"
    ]
   },
