--- a/_proc/index.ipynb
+++ b/_proc/index.ipynb
@@ -106,7 +106,7 @@
     }
    ],
    "source": [
-    "results = ff.process_image(\"obama.png\")\n",
+    "results = ff.process_image_single_face(\"obama.png\")\n",
     "results.keys()"
    ]
   },
