accepts image path or array

--- a/nbs/00_forensicface.ipynb
+++ b/nbs/00_forensicface.ipynb
@@ -138,7 +138,10 @@
     "\n",
     "        - aligned_face: face after alignment using the keypoints as references for affine transform\n",
     "        \"\"\"\n",
-    "        bgr_img = cv2.imread(imgpath)\n",
+    "        if type(imgpath) == str: # image path passed as argument\n",
+    "            bgr_img = cv2.imread(imgpath)\n",
+    "        else: #image array passed as argument\n",
+    "            bgr_img = imgpath.copy()\n",
     "        faces = self.detectmodel.get(bgr_img)\n",
     "        if len(faces) == 0:\n",
     "            return {}\n",
@@ -193,7 +196,10 @@
     "\n",
     "        - aligned_face: face after alignment using the keypoints as references for affine transform\n",
     "        \"\"\"\n",
-    "        bgr_img = cv2.imread(imgpath)\n",
+    "        if type(imgpath) == str: # image path passed as argument\n",
+    "            bgr_img = cv2.imread(imgpath)\n",
+    "        else: #image array passed as argument\n",
+    "            bgr_img = imgpath.copy()\n",
     "        faces = self.detectmodel.get(bgr_img)\n",
     "        if len(faces) == 0:\n",
     "            return []\n",
@@ -353,7 +359,7 @@
     {
      "data": {
       "text/plain": [
-       "0.85562384"
+       "0.855624"
       ]
      },
      "execution_count": null,
