--- a/nbs/00_forensicface.ipynb
+++ b/nbs/00_forensicface.ipynb
@@ -207,6 +207,7 @@
     "        for face in faces:\n",
     "\n",
     "            kps = face.kps\n",
+    "            bbox = face.bbox.astype('int')\n",
     "            gender = \"M\" if face.gender == 1 else \"F\"\n",
     "            age = face.age\n",
     "            pitch, yaw, roll = face.pose\n",
@@ -233,6 +234,7 @@
     "                    \"roll\": roll,\n",
     "                    \"embedding\": normalized_embedding.flatten() * norm.flatten()[0],\n",
     "                    \"norm\": norm.flatten()[0],\n",
+    "                    \"bbox\": bbox,\n",
     "                   #\"magface_embedding\": mag_embedding,\n",
     "                    #\"magface_norm\": mag_norm,\n",
     "                    #\"aligned_face\": cv2.cvtColor(bgr_aligned_face, cv2.COLOR_BGR2RGB),\n",
@@ -270,14 +272,24 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/rafael/mambaforge/envs/onnxgpu/lib/python3.9/site-packages/insightface/utils/transform.py:68: FutureWarning: `rcond` parameter will change to the default of machine precision times ``max(M, N)`` where M and N are the input matrix dimensions.\n",
+      "To use the future default and silence this warning we advise to pass `rcond=None`, to keep using the old, explicitly pass `rcond=-1`.\n",
+      "  P = np.linalg.lstsq(X_homo, Y)[0].T # Affine matrix. 3 x 4\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "(dict_keys(['keypoints', 'ipd', 'gender', 'age', 'pitch', 'yaw', 'roll', 'embedding', 'norm']),\n",
+       "(dict_keys(['keypoints', 'ipd', 'gender', 'age', 'pitch', 'yaw', 'roll', 'embedding', 'norm', 'bbox']),\n",
        " array([[471.42743, 418.60498],\n",
        "        [522.68933, 418.05362],\n",
        "        [498.82196, 449.08923],\n",
        "        [479.3499 , 476.44193],\n",
-       "        [514.33453, 476.06885]], dtype=float32))"
+       "        [514.33453, 476.06885]], dtype=float32),\n",
+       " array([441, 355, 548, 506]))"
       ]
      },
      "execution_count": null,
@@ -287,7 +299,7 @@
    ],
    "source": [
     "results = ff.process_image_multiple_faces(\"tela.png\")\n",
-    "results[0].keys(), results[0][\"keypoints\"]\n"
+    "results[0].keys(), results[0][\"keypoints\"], results[0]['bbox']\n"
    ]
   },
   {
